remove codeblock/quote border fixes weird corner clipping

--- a/_sass/hima/colorschemes/_base.scss
+++ b/_sass/hima/colorschemes/_base.scss
@@ -13,11 +13,9 @@ $social-icon-fill: var(--hima-social-icon-fill);
 $post-meta-color: var(--hima-post-meta-color);
 
 $quote-background: var(--hima-quote-background);
-$quote-border: var(--hima-quote-border);
-$quote-border-accent: var(--hima-quote-border-accent);
+$quote-accent: var(--hima-quote-accent);
 
-$codeblock-border: var(--hima-codeblock-border);
-$codeblock-border-accent: var(--hima-codeblock-border-accent);
+$codeblock-accent: var(--hima-codeblock-accent);
 $codeblock-background: var(--hima-codeblock-background);
 $inline-code-border: var(--hima-inline-code-border);
 $inline-code-background: var(--hima-inline-code-background);
