--- a/_sass/hima/colorschemes/_gruvbox-dark-theme.scss
+++ b/_sass/hima/colorschemes/_gruvbox-dark-theme.scss
@@ -19,12 +19,10 @@ $white: #faf6e8;
   --hima-post-meta-color: #{$white2};
 
   --hima-quote-background: #{$black0h};
-  --hima-quote-border: #{$black0};
-  --hima-quote-border-accent: #{$yellow};
+  --hima-quote-accent: #{$yellow};
 
   --hima-codeblock-background: #{$black0h};
-  --hima-codeblock-border: #{$black0};
-  --hima-codeblock-border-accent: #{$aqua};
+  --hima-codeblock-accent: #{$aqua};
   --hima-inline-code-border: #{$aqua};
   --hima-inline-code-background: #{$black0h};
 
