--- a/_sass/hima/colorschemes/_gruvbox-light-theme.scss
+++ b/_sass/hima/colorschemes/_gruvbox-light-theme.scss
@@ -19,11 +19,9 @@ $white: #faf6e8;
   --hima-post-meta-color: #{$black2};
 
   --hima-quote-background: #{$white};
-  --hima-quote-border: #{$white0h};
-  --hima-quote-border-accent: #{$yellow-light};
+  --hima-quote-accent: #{$yellow-light};
 
-  --hima-codeblock-border: #{$white0h};
-  --hima-codeblock-border-accent: #{$aqua-light};
+  --hima-codeblock-accent: #{$aqua-light};
   --hima-codeblock-background: #{$white};
   --hima-inline-code-border: #{$aqua-light};
   --hima-inline-code-background: #{$white};
